-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.5.1
-
None
-
-
103ffe1b5 (dev), cbf5a4050 (6.6), 4f3c5a629 (6.5)
on firefox, a PUT request with a response with a 0 content-length generates a critical error and exit the application:
Application exit (RuntimeError: integer divide by zero)
in file:
qtbase/src/network/access/qnetworkreplywasmimpl.cpp
in function
void QNetworkReplyWasmImplPrivate::emitDataReadProgress(qint64 bytesReceived, qint64 bytesTotal)
if we replace
percentFinished = (bytesReceived / bytesTotal) * 100;
by
percentFinished = bytesTotal ? (bytesReceived / bytesTotal) * 100 : 100;
it fix the bug
| For Gerrit Dashboard: QTBUG-114078 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 481597,4 | wasm: fix networkreply with empty data | dev | qt/qtbase | Status: MERGED | +2 | 0 |
| 484842,2 | wasm: fix networkreply with empty data | 6.6 | qt/qtbase | Status: MERGED | +2 | 0 |
| 484843,2 | wasm: fix networkreply with empty data | 6.5 | qt/qtbase | Status: MERGED | +2 | 0 |