wasm: fix networkreply with empty data

Fixes: QTBUG-114078
Change-Id: I78e6844ab1aa5d385d8c558c696299e7fa845f50
Reviewed-by: Mikołaj Boc <Mikolaj.Boc@qt.io>
(cherry picked from commit 103ffe1b584befe863fe040ce6268ebd5e4ab13b)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>